--- a/Login.html
+++ b/Login.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Iniciar sesión - ChocoBite</title>
-  <link rel="stylesheet" href="Estilo.css" />
-</head>
-<body>
-  <div id="usuarioBar"></div>
-  <script src="usuarioBar.js"></script>
+<form id="loginForm">
+  <label>Usuario <input id="username" name="username" required></label>
+  <label>Contraseña <input id="password" name="password" type="password" required></label>
+  <button type="submit">Iniciar sesión</button>
+</form>
 
-  <main style="max-width:420px;margin:3rem auto;padding:1.5rem;background:#fff;border-radius:12px;">
-    <h2>Iniciar sesión</h2>
-
-    <form id="loginForm">
-      <input id="username" type="text" placeholder="Usuario" required style="width:100%;margin:8px 0;padding:10px;border-radius:8px;" />
-      <input id="password" type="password" placeholder="Contraseña" required style="width:100%;margin:8px 0;padding:10px;border-radius:8px;" />
-      <button type="submit" class="btn" style="width:100%;margin-top:8px;">Ingresar</button>
-    </form>
-
-    <p style="margin-top:12px;text-align:center;">
-      ¿No tienes cuenta? <a href="registro.html">Regístrate</a>
-    </p>
-  </main>
-
-  <script src="login.js"></script>
-</body>
-</html>
+<!-- al final del body -->
+<script src="login.js"></script>
