--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TiendaVirtual</title>
-  <link rel="stylesheet" href="Estilo.css">
+  <base href="/frontendfinal/">
+  <link rel="stylesheet" href="Estilo.css" />
 </head>
 <body>
   <div id="usuarioBar"></div>
-<script src="usuarioBar.js"></script>
+  <script src="usuarioBar.js" defer></script>
+
   <main>
     <div class="dividir-pantalla">
-
-      <!-- Columna izquierda con imagen -->
       <div class="izquierda"></div>
-
-      <!-- Columna derecha -->
       <div class="derecha">
-
-        <!-- Menú de navegación arriba -->
         <header>
           <nav>
             <ul class="menubotones">
@@ -30,18 +26,15 @@
           </nav>
         </header>
 
-        <!-- Título y subtítulo centrados -->
         <div class="titulo-bienvenida">
           <h1 class="titulogrande">🍪ChocoBite 🍪</h1>
         </div>
 
-        <!-- Descripción centrada -->
         <div class="contenido">
           <p>Endulza tu día con nuestras galletas artesanales, hechas con amor y los mejores ingredientes. ¡Siente la frescura en cada mordida!</p>
         </div>
 
       </div>
-
     </div>
   </main>
 </body>
