--- a/Categoria.html
+++ b/Categoria.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
-    <link rel="stylesheet" href="Menu.css">
-    <script src="Menu.js" defer></script>
-  </head>
-  <body class="Carrito">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Productos - ChocoBite</title>
+  <base href="/frontendfinal/">
+  <link rel="stylesheet" href="Menu.css" />
+  <script src="Menu.js" defer></script>
+  <script src="usuarioBar.js" defer></script>
+</head>
+<body>
+  <header>
+    <nav>
+      <ul class="menubotones">
+        <li><a href="index.html" class="btn">Inicio</a></li>
+        <li><a href="Sobrenosotros.html" class="btn">Sobre Nosotros</a></li>
+        <li><a href="Carrito.html" class="btn">Carrito</a></li>
+        <li><a href="Fundadores.html" class="btn">Fundadores</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<header>
-  <nav>
-    <ul class="menubotones">
-      <li><a href="index.html" class="btn">Inicio</a></li>
-      <li><a href="Sobrenosotros.html" class="btn">Sobre Nosotros</a></li>
-      <li><a href="Carrito.html" class="btn">Carrito</a></li>
-      <li><a href="Fundadores.html" class="btn">Fundadores</a></li>
-    </ul>
-  </nav>
-</header>
-   <main>
-
-
-  <section class="sobre-tienda">
+  <main>
+    <section class="sobre-tienda">
       <h1>Nuestro catálogo</h1>
-      <div id="productos"></div> <!-- Aquí se cargan las cards dinámicamente -->
-  </section>
-
-</main>
-    </body>
+      <div id="productos"></div> <!-- cards dinámicas -->
+    </section>
+  </main>
+</body>
 </html>
