--- a/Login.html
+++ b/Login.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Iniciar sesión - ChocoBite</title>
   <link rel="stylesheet" href="Estilo.css">
+     <li><a href="index.html" class="btn">Inicio</a></li>
 </head>
 <body>
   <div id="usuarioBar"></div>
