Fix: permitir acceso al carrito sin login

--- a/Login.html
+++ b/Login.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Sistema de Pedidos</title>
+   <li><a href="index.html" class="btn">Inicio</a></li>
   <style>
     * {
       margin: 0;
