--- a/Login.html
+++ b/Login.html
@@ -81,14 +81,14 @@
 
     .form-group input:focus {
       outline: none;
-      border-color: #667eea;
+      border-color: #4249417a;
       box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
     }
 
     .btn-login {
       width: 100%;
       padding: 12px;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #a09997 0%, #a09997 100%);
       color: white;
       border: none;
       border-radius: 8px;
@@ -167,7 +167,7 @@
     }
 
     .register-link a {
-      color: #667eea;
+      color: #a09997;
       text-decoration: none;
       font-weight: 600;
     }
