Fix: permitir acceso al carrito sin login

--- a/admin.html
+++ b/admin.html
@@ -18,7 +18,7 @@
     }
 
     .header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #a09997 0%, #72687c 100%);
       color: white;
       padding: 20px 40px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -64,7 +64,7 @@
 
     .btn-logout:hover {
       background: white;
-      color: #667eea;
+      color: #a09997;
     }
 
     .container {
@@ -85,7 +85,7 @@
       padding: 20px;
       border-radius: 15px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-      border-left: 4px solid #667eea;
+      border-left: 4px solid #a09997;
     }
 
     .stat-card h3 {
@@ -105,7 +105,7 @@
     .stat-card.pendiente { border-left-color: #ff9800; }
     .stat-card.atendido { border-left-color: #4caf50; }
     .stat-card.cancelado { border-left-color: #f44336; }
-    .stat-card.total { border-left-color: #667eea; }
+    .stat-card.total { border-left-color: #a09997; }
 
     .controls {
       background: white;
@@ -136,7 +136,7 @@
 
     .search-box input:focus {
       outline: none;
-      border-color: #667eea;
+      border-color: #a09997;
     }
 
     .search-icon {
