Fix: permitir acceso al carrito sin login

--- a/Login.html
+++ b/Login.html
@@ -13,7 +13,7 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #6b947c 0%, #6e6c6f 100%);
       min-height: 100vh;
       display: flex;
       justify-content: center;
@@ -82,7 +82,7 @@
     .form-group input:focus {
       outline: none;
       border-color: #4249417a;
-      box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+      box-shadow: 0 0 0 3px rgba(136, 137, 140, 0.1);
     }
 
     .btn-login {
