--- a/Login.html
+++ b/Login.html
@@ -13,7 +13,7 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #6b947c 0%, #6e6c6f 100%);
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       min-height: 100vh;
       display: flex;
       justify-content: center;
@@ -81,14 +81,14 @@
 
     .form-group input:focus {
       outline: none;
-      border-color: #4249417a;
-      box-shadow: 0 0 0 3px rgba(136, 137, 140, 0.1);
+      border-color: #667eea;
+      box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
     }
 
     .btn-login {
       width: 100%;
       padding: 12px;
-      background: linear-gradient(135deg, #a09997 0%, #a09997 100%);
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       color: white;
       border: none;
       border-radius: 8px;
@@ -100,7 +100,7 @@
 
     .btn-login:hover {
       transform: translateY(-2px);
-      box-shadow: 0 5px 15px rgba(114, 115, 119, 0.4);
+      box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
     }
 
     .btn-login:active {
@@ -167,7 +167,7 @@
     }
 
     .register-link a {
-      color: #a09997;
+      color: #667eea;
       text-decoration: none;
       font-weight: 600;
     }
@@ -237,6 +237,7 @@
     </form>
 
     <div class="register-link">
+      <a href="index.html" style="display: inline-block; margin-bottom: 10px;">← Volver al inicio</a><br>
       ¿No tienes cuenta? <a href="register.html">Regístrate aquí</a>
     </div>
   </div>
