--- a/registro.html
+++ b/registro.html
@@ -31,7 +31,7 @@
 
           <div class="actions">
             <button type="submit" class="btn primary">Registrarse</button>
-            <a class="btn ghost" href="login.html">Ya tengo cuenta</a>
+            <a class="btn ghost" href="Login.html">Ya tengo cuenta</a>
           </div>
           <p class="muted small">Tu contraseña debe tener al menos 6 caracteres (recomendado usar más).</p>
         </form>
